# python-template

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: flake8.yml  mypy.yml  pytest.yml  tests.yml
docker/: .env.tmp  docker-compose.yml
docker/python/: Dockerfile
docs/: conf.py
sample/: main.py
tests/: test_main.py
