[tool.poetry]
name = "sample"
version = "0.1.0"
description = "sample."
authors = ["kohdice <kohdice@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
flake8-bugbear = "^23.1.14"
flake8-builtins = "^2.1.0"
flake8-pytest-style = "^1.6.0"
pep8-naming = "^0.13.3"
pyproject-flake8 = "^6.0.0.post1"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
taskipy = "^1.11.0"
debugpy = "^1.6.7"
sphinx-rtd-theme = "^1.2.0"
sphinx-pyproject = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "tests/*",
    ".venv/*",
]


[project]
name = "sample"
version = "0.1.0"
description = "sample."
readme = "README.md"

[[project.authors]]
name = "kohdice"

[tool.sphinx-pyproject]
project = "sample"
copyright = "2023, kohdice"
language = "en"
package_root = "sample"
html_theme = "sphinx_rtd_theme"
todo_include_todos = true
templates_path = ["_templates"]
html_static_path = ["_static"]
extensions = [
  "sphinx.ext.autodoc",
  "sphinx.ext.viewcode",
  "sphinx.ext.todo",
  "sphinx.ext.napoleon",
]

[tool.taskipy.tasks]
test = "pytest -s -vv --cov=. --cov-branch --cov-report=html"
fmt = "task fmt-black && task fmt-isort"
fmt-black = "black sample tests"
fmt-isort = "isort sample tests"
lint = "task lint-black && task lint-flake8 && task lint-mypy"
lint-flake8 = "flake8 sample tests"
lint-mypy = "mypy sample tests"
lint-black = "black --check sample tests"
docs = "sphinx-apidoc -F -o docs sample && sphinx-build docs docs/build"
